--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -26,15 +27,19 @@ jobs:
   docker-push:
     needs: build-and-test
     runs-on: ubuntu-latest
+    # Se ejecuta solo en la rama main
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
+        # NOTA: Si VS Code muestra advertencias en 'secrets', ES NORMAL.
+        # Las variables se leen desde GitHub Actions en la nube, no desde tu PC.
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -45,6 +50,7 @@ jobs:
         with:
           context: .
           push: true
+          # Usamos tags múltiples para versionar la imagen
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/sistema-hotelero:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/sistema-hotelero:${{ github.sha }}
